# llm_engineering

./: .gitignore  pyproject.toml
week1/: day1.ipynb  day2 EXERCISE.ipynb  day5.ipynb  week1 EXERCISE.ipynb
week2/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb
week3/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb
