[project]
name = "llm-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "faiss-cpu>=1.11.0",
    "gradio>=5.31.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.2",
    "langchain[docarray]>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.18",
    "matplotlib>=3.10.3",
    "openai>=1.82.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.3",
    "datasets>=3.6.0",
    "sentencepiece>=0.2.0",
    "google-generativeai>=0.8.5",
    "anthropic>=0.52.0",
    "unstructured>=0.17.2",
    "chromadb>=1.0.10",
    "plotly>=6.1.1",
    "jupyter-dash>=0.4.2",
    "beautifulsoup4>=4.13.4",
    "pydub>=0.25.1",
    "modal>=1.0.1",
    "ollama>=0.4.8",
    "accelerate>=1.7.0",
    "bitsandbytes>=0.45.5",
    "psutil>=7.0.0",
    "setuptools>=80.8.0",
    "speedtest-cli>=2.1.3",
    "sentence-transformers>=4.1.0",
    "feedparser>=6.0.11",
    "numpy>=1.26.4",
    "gensim>=4.3.2",
    "hf-xet>=1.1.2",
    "httpx>=0.28.1",
]
